--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,11 @@
     <modules>
         <module>Unit_3</module>
         <module>Practice</module>
+        <module>BookPracticeMain</module>
+        <module>BookPractice</module>
+        <module>Chapter1</module>
+        <module>Unit_7_Crud_App</module>
+        <module>Unit_7_CRUD</module>
     </modules>
 
     <properties>
