--- a/Unit_8_Generics_hw/pom.xml
+++ b/Unit_8_Generics_hw/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>Unit_8_Generics</artifactId>
+    <artifactId>Unit_8_Generics_hw</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
